--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@vitejs/plugin-react": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.11.1",
+    "react-router-dom": "^6.11.1",
     "sass": "^1.62.1",
     "typescript": "^5.0.4",
     "vite": "^4.2.1"
