--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tauri-apps/api": "^1.3.0",
     "@tauri-apps/cli": "^1.3.1",
     "@types/node": "^18.7.10",
