--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tauri-apps/api": "^1.3.0",
     "@tauri-apps/cli": "^1.3.1",
+    "@types/js-search": "^1.4.0",
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^4.0.0",
+    "js-search": "^2.0.1",
     "modern-normalize": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
