--- a/package.json
+++ b/package.json
@@ -1,72 +1,80 @@
 {
-  "private": true,
-  "name": "cutsy-editor",
-  "description": "a lil video clip editor",
-  "type": "module",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/seleb/cutsy-editor"
-  },
-  "scripts": {
-    "start": "npm run tauri dev",
-    "start:ui": "vite",
-    "build": "npm run tauri build",
-    "build:ui": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
-  },
-  "browserslist": {
-    "target": [
-      "es2021",
-      "last 3 Chrome versions",
-      "safari13"
-    ]
-  },
-  "release": {
-    "branches": [
-      "+([0-9])?(.{+([0-9]),x}).x",
-      "main"
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/github",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "dist/*.js",
-            "README.md",
-            "CHANGELOG.md",
-            "package.json",
-            "package-lock.json"
-          ]
-        }
-      ]
-    ]
-  },
-  "devDependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@tauri-apps/api": "^1.3.0",
-    "@tauri-apps/cli": "^1.3.1",
-    "@types/js-search": "^1.4.0",
-    "@types/node": "^18.7.10",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^4.0.0",
-    "js-search": "^2.0.1",
-    "modern-normalize": "^1.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.11.1",
-    "react-router-dom": "^6.11.1",
-    "react-use-pagination": "^2.0.1",
-    "sass": "^1.62.1",
-    "typescript": "^5.0.4",
-    "vite": "^4.2.1"
-  }
+	"private": true,
+	"name": "cutsy-editor",
+	"description": "a lil video clip editor",
+	"type": "module",
+	"version": "1.0.0",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/seleb/cutsy-editor"
+	},
+	"scripts": {
+		"start": "npm run tauri dev",
+		"start:ui": "vite",
+		"build": "npm run tauri build",
+		"build:ui": "tsc && vite build",
+		"preview": "vite preview",
+		"tauri": "tauri",
+		"lint": "eslint \"./src/**/*.{js,ts,jsx,tsx}\""
+	},
+	"browserslist": {
+		"target": [
+			"es2021",
+			"last 3 Chrome versions",
+			"safari13"
+		]
+	},
+	"release": {
+		"branches": [
+			"+([0-9])?(.{+([0-9]),x}).x",
+			"main"
+		],
+		"plugins": [
+			"@semantic-release/commit-analyzer",
+			"@semantic-release/release-notes-generator",
+			"@semantic-release/changelog",
+			"@semantic-release/npm",
+			"@semantic-release/github",
+			[
+				"@semantic-release/git",
+				{
+					"assets": [
+						"dist/*.js",
+						"README.md",
+						"CHANGELOG.md",
+						"package.json",
+						"package-lock.json"
+					]
+				}
+			]
+		]
+	},
+	"devDependencies": {
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@tauri-apps/api": "^1.3.0",
+		"@tauri-apps/cli": "^1.3.1",
+		"@types/js-search": "^1.4.0",
+		"@types/node": "^18.7.10",
+		"@types/react": "^18.0.15",
+		"@types/react-dom": "^18.0.6",
+		"@typescript-eslint/eslint-plugin": "^5.59.5",
+		"@typescript-eslint/parser": "^5.59.5",
+		"@vitejs/plugin-react": "^4.0.0",
+		"eslint": "^8.40.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-airbnb-typescript": "^17.0.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-import": "^2.27.5",
+		"js-search": "^2.0.1",
+		"modern-normalize": "^1.1.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router": "^6.11.1",
+		"react-router-dom": "^6.11.1",
+		"react-use-pagination": "^2.0.1",
+		"sass": "^1.62.1",
+		"typescript": "^5.0.4",
+		"vite": "^4.2.1"
+	}
 }
