--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
 		"@typescript-eslint/parser": "^5.59.5",
 		"@vitejs/plugin-react": "^4.0.0",
 		"eslint": "^8.40.0",
-		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-import": "^2.27.5",
