don't require caption since videos are from users

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
 		}], // all dev deps
 
 		"react/require-default-props": "off", // using TS instead of prop-types
+		"jsx-a11y/media-has-caption": "off", // videos are from the user with no way to get caption
 
 		// prefer named
 		"import/prefer-default-export": "off",
