--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
 	"root": true,
 	"parser": "@typescript-eslint/parser",
-	"plugins": ["@typescript-eslint"],
+	"plugins": ["@typescript-eslint", "prettier"],
 	"extends": [
 		"airbnb",
 		"airbnb/hooks",
@@ -22,6 +22,7 @@
 		},
 	},
 	"rules": {
+		"prettier/prettier": "error",
 		"max-len": "off", // just apply common-sense
 		"no-param-reassign": "off",
 		"import/no-extraneous-dependencies": ["error", {
@@ -44,9 +45,8 @@
 
 		// tabs instead of spaces
 		"no-tabs": "off",
-		"indent": ["error", "tab", {
-			"SwitchCase": 1,
-		}],
+		// prettier handles indent
+		"indent": "off",
 
 		"import/extensions": ["error", "never"],
 		"no-multi-assign": "off",
