--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-prettier": "^4.2.1",
 		"js-search": "^2.0.1",
 		"modern-normalize": "^1.1.0",
 		"react": "^18.2.0",
