--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"build:ui": "tsc && vite build",
 		"preview": "vite preview",
 		"tauri": "tauri",
-		"lint": "eslint \"./src/**/*.{js,ts,jsx,tsx}\""
+		"lint": "eslint \"./src/**/*.{js,ts,jsx,tsx}\"",
+		"stylelint": "stylelint \"**/*.scss\""
 	},
 	"browserslist": {
 		"target": [
@@ -75,6 +76,9 @@
 		"react-router-dom": "^6.11.1",
 		"react-use-pagination": "^2.0.1",
 		"sass": "^1.62.1",
+		"stylelint": "^15.6.1",
+		"stylelint-config-standard": "^33.0.0",
+		"stylelint-config-standard-scss": "^9.0.0",
 		"typescript": "^5.0.4",
 		"vite": "^4.2.1"
 	}
