--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,1 +1,11 @@
-{ "extends": ["stylelint-config-standard-scss"] }
+{
+	"extends": ["stylelint-config-standard-scss"],
+	"rules": {
+		"selector-pseudo-class-no-unknown": [
+			true,
+			{
+				"ignorePseudoClasses": ["global"]
+			}
+		]
+	}
+}
