--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"js-search": "^2.0.1",
 		"modern-normalize": "^1.1.0",
+		"prettier": "^2.8.8",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router": "^6.11.1",
@@ -79,6 +80,7 @@
 		"stylelint": "^15.6.1",
 		"stylelint-config-standard": "^33.0.0",
 		"stylelint-config-standard-scss": "^9.0.0",
+		"stylelint-prettier": "^3.0.0",
 		"typescript": "^5.0.4",
 		"vite": "^4.2.1"
 	}
