--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ tauri = { version = "1.3", features = ["dialog-ask", "dialog-message", "dialog-o
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ffmpeg-sidecar = "0.4.1"
+thiserror = "1.0.40"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
