--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ffmpeg-sidecar = "0.4.1"
 thiserror = "1.0.40"
+tauri-plugin-persisted-scope = { version = "0.1.3", features = ["protocol-asset"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
