--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: ./.github/actions/tauri-setup
         with:
           linux: ${{ matrix.platform.name == 'ubuntu-20.04' }}
-      - uses: JonasKruckenberg/tauri-build@v1
+      - uses: JonasKruckenberg/tauri-build@tauri-build-v1.5.11
   lint:
     runs-on: ubuntu-latest
     steps:
