--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = ["dialog-ask", "dialog-message", "dialog-open", "dialog-save", "fs-read-dir", "path-all", "protocol-asset", "shell-open", "window-set-fullscreen", "window-set-title"] }
+tauri = { version = "1.3", features = [ "window-close", "dialog-confirm", "dialog-ask", "dialog-message", "dialog-open", "dialog-save", "fs-read-dir", "path-all", "protocol-asset", "shell-open", "window-set-fullscreen", "window-set-title"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ffmpeg-sidecar = "0.4.1"
